--- a/assignment-2-api-server/src/main/resources/application.properties
+++ b/assignment-2-api-server/src/main/resources/application.properties
@@ -1,18 +1,10 @@
-#spring.main.banner-mode=off
-#logging.level.org.springframework=ERROR
-#
-##Database configuration
-#spring.datasource.url=jdbc:mysql://localhost:3306/${database}?useSSL=false
-#spring.datasource.username=${database_username}
-#spring.datasource.password=${database_password}
-
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 
-#Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/Xcompany?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=namhnp
-spring.datasource.password=namhnp
+##Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/${database}?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=${database_username}
+spring.datasource.password=${database_password}
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
